<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp">
    <TextView
        android:id="@+id/textoTiempo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor_tiempo_placeholder"
        android:textSize="18sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/textoPasos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor_pasos_placeholder"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/textoDistancia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor_distancia_placeholder"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/textoEstado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor_estado_placeholder"
        android:textSize="18sp" />
</LinearLayout>