<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp">
    <TextView
        android:id="@+id/textoTituloPantalla"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_analisis"
        android:textSize="22sp"
        android:textStyle="bold"
        android:paddingBottom="8dp" />
    <com.example.projecte_final_android.views.GraphView
        android:id="@+id/vistaGrafica"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#F5F5F5" />
    <FrameLayout
        android:id="@+id/contenedorEstadisticas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ECEFF1"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" />
    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/botonIniciar"
            style="@style/EstiloBoton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/iniciar" />
        <Button
            android:id="@+id/botonPausar"
            style="@style/EstiloBoton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pausar" />
        <Button
            android:id="@+id/botonFinalizar"
            style="@style/EstiloBoton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/finalizar" />
    </LinearLayout>
</LinearLayout>