<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">
    <TextView

        android:id="@+id/textoTituloHistorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_historial"
        android:textSize="22sp"
        android:textStyle="bold"
        android:paddingBottom="8dp" />
    <TextView
        android:id="@+id/textoVacio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/historial_vacio"
        android:padding="16dp"
        android:visibility="gone"
        android:gravity="center" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listaSesiones"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <Button
        android:id="@+id/botonVolver"
        style="@style/EstiloBoton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volver"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp" />
</LinearLayout>